[gd_scene load_steps=7 format=3]

[ext_resource path="res://scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/LogisticsNetwork.gd" type="Script" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2(50, 50)

[sub_resource type="StandardMaterial3D" id=2]
albedo_color = Color(0.141176, 0.227451, 0.176471, 1)

[sub_resource type="BoxMesh" id=3]
size = Vector3(6, 3, 10)

[sub_resource type="BoxMesh" id=4]
size = Vector3(2.5, 2.5, 4)

[node name="Game" type="Node3D"]
script = ExtResource(1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource(4)

[node name="Sun" type="DirectionalLight3D" parent="."]
rotation_degrees = Vector3(-35, 30, 0)
light_energy = 1.3

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(0.9, 0.0, 0.4, 0.0, 1.0, 0.0, -0.4, 0.0, 0.9, -20.0, 12.0, -20.0)
current = true
fov = 60.0

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource(1)
material_override = SubResource(2)

[node name="LogisticsRoot" type="Node3D" parent="."]
script = ExtResource(3)

[node name="SortingCenter" type="MeshInstance3D" parent="LogisticsRoot"]
mesh = SubResource(3)
translation = Vector3(0, 1.5, 0)
material_override = SubResource(2)

[node name="LoadingDock" type="MeshInstance3D" parent="LogisticsRoot"]
mesh = SubResource(4)
translation = Vector3(-10, 1.25, -6)

[node name="DeliveryVan" type="MeshInstance3D" parent="LogisticsRoot"]
mesh = SubResource(4)
translation = Vector3(10, 1.25, 8)

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDLayer" instance=ExtResource(2)]
